--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -34,19 +34,19 @@
     font-family: var(--fontJ) !important;
 }
 
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    right: auto;
-    bottom: auto;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    outline: none;
-}
+// .modal {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     right: auto;
+//     bottom: auto;
+//     margin-right: -50%;
+//     transform: translate(-50%, -50%);
+//     background: white;
+//     padding: 20px;
+//     border-radius: 10px;
+//     outline: none;
+// }
 
 .overlay {
     position: fixed;
@@ -56,4 +56,3 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.75);
 }
-
