--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -7,8 +7,12 @@
     background-color: var(--white);
     box-shadow: 0 0 10px var(--white200);
     overflow-y: scroll;
+    scrollbar-width: none;
+    /* Firefox */
+    -ms-overflow-style: none;
+    /* Internet Explorer and Edge */
 
-    h1 {
+    >h1 {
         padding: 2rem 2rem 1rem 2rem;
 
         a {
@@ -19,7 +23,7 @@
 
     }
 
-    h2 {
+    >h2 {
         font-family: var(--fontJ);
         font-size: 12px;
         font-weight: 900;
@@ -29,8 +33,8 @@
         padding: 2rem 2rem 1rem 2rem;
     }
 
-    ul {
-        li {
+    >ul {
+        >li {
             color: var(--black500);
             font-weight: 400;
             font-size: 20px;
@@ -43,14 +47,19 @@
                 display: block;
             }
 
+            span {
+                text-transform: uppercase;
+                padding-right: 10px;
+            }
+
             .icon {
-                width: 20px;
+                width: 20\px;
                 height: 20px;
                 background-size: 20px;
                 background-repeat: no-repeat;
                 display: inline-block;
                 margin-right: 14px;
-                vertical-align: -4px;
+                vertical-align: -2px;
                 border-radius: 3px;
                 margin-left: 20px;
             }
@@ -86,8 +95,6 @@
 
             .icon2 {
                 margin-left: 20px;
-                width: 20px;
-                height: 20px;
                 display: inline-block;
                 margin-right: 14px;
 
@@ -97,6 +104,34 @@
                     height: 100%;
                 }
             }
+        }
+    }
+}
+
+.playList__but {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    input {
+        width: 100px;
+        border: 1px solid var(--black);
+        border-radius: 3px;
+    }
+
+    button {
+        margin: 2px;
+        background-color: #222;
+        padding: 1px 6px;
+        border-radius: 6px;
+        color: var(--white);
+        font-size: 1rem;
+        font-weight: bold;
+        cursor: pointer;
+
+        &:hover {
+            background-color: var(--white);
+            color: var(--black);
         }
     }
 }
