--- a/src/assets/scss/_aside.scss
+++ b/src/assets/scss/_aside.scss
@@ -6,6 +6,13 @@
     height: 100vh;
     background-color: var(--white);
     box-shadow: 0 0 10px var(--white200);
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(100%);
+    z-index: 1000;
+
+    &.visible {
+        transform: translateX(0);
+    }
 
     .play-now {
         padding: 2rem;
@@ -35,7 +42,6 @@
                 background-color: var(--white200);
                 background-size: cover;
                 background-position: center center;
-                border-radius: 10px;
                 margin-bottom: 10px;
                 position: relative;
 
@@ -92,6 +98,7 @@
         .controls {
             display: flex;
             justify-content: center;
+            align-items: center;
 
             .shuffle.active {
                 svg {
@@ -105,7 +112,6 @@
                 }
             }
 
-            .play {}
 
             >span {
                 display: inline-block;
@@ -138,10 +144,11 @@
         }
 
         .volume {
-            text-align: center;
-            display: none;
 
             input {
+                bottom: -10px;
+                transform: translateX(-50%);
+                width: 100px;
                 background: linear-gradient(90deg, #5779FF 0%, #7E56FF 100%);
                 height: 3px;
                 border-radius: 5px;
@@ -164,7 +171,7 @@
             color: var(--black300);
 
             svg {
-                color: var(--pointColor);
+                color: var (--pointColor);
             }
         }
 
@@ -241,4 +248,20 @@
             }
         }
     }
+}
+
+.menu-button {
+    position: fixed;
+    top: 30px;
+    right: 20px;
+    z-index: 10000;
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.Toastify {
+    z-index: 100000;
+    position: fixed;
 }
