--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -33,6 +33,7 @@
                 object-fit: cover;
                 margin-bottom: 10px;
                 border-radius: 10px;
+                cursor: pointer;
             }
 
             h3 {
